--- a/Read/ReadJavaWiki/08.类的加载/01.类加载的详细过程.md
+++ b/Read/ReadJavaWiki/08.类的加载/01.类加载的详细过程.md
@@ -61,7 +61,7 @@
 
 #### 3.2 准备
 - 准备
-    - 为类变量分配内存并设置变量的初始值，这些变量使用的内存都将在方法区中进行分配。
+    - 基本类型的属性在类加载后的准备阶段都会被初始化为默认值。为类变量分配内存并设置变量的初始值，这些变量使用的内存都将在方法区中进行分配。
 - 整体类型是：
     - `byte`，其值为8位有符号二进制补码整数，其默认值为零
     - `short`，其值为16位有符号二进制补码整数，其默认值为零
@@ -71,10 +71,10 @@
 - 浮点类型是：
     - `float`，其值是浮点值集的元素，或者，如果支持，则为float-extended-exponent值集，其默认值为正零
     - `double`，其值是double值集的元素，或者，如果支持，则为double-extended-exponent值集，其默认值为正零
-    - 所述的值`boolean` 类型编码的真值`true`和`false`，并且缺省值是`false`。
+    - 所述的值`boolean`类型编码的真值`true`和`false`，并且缺省值是`false`。
 - 参考类型和值
-    - 有三种`reference` 类型：类类型，数组类型和接口类型。它们的值分别是对动态创建的类实例，数组或类实例或实现接口的数组的引用。
-    - 数组类型由具有单个维度的 *组件类型*（其长度不是由类型给出）组成。数组类型的组件类型本身可以是数组类型。如果从任何数组类型开始，考虑其组件类型，然后（如果它也是数组类型）该类型的组件类型，依此类推，最终必须达到不是数组类型的组件类型; 这称为数组类型的*元素*类型。数组类型的元素类型必须是基本类型，类类型或接口类型。
+    - 有三种`reference`类型：类类型，数组类型和接口类型。它们的值分别是对动态创建的类实例，数组或类实例或实现接口的数组的引用。
+    - 数组类型由具有单个维度的*组件类型*（其长度不是由类型给出）组成。数组类型的组件类型本身可以是数组类型。如果从任何数组类型开始，考虑其组件类型，然后（如果它也是数组类型）该类型的组件类型，依此类推，最终必须达到不是数组类型的组件类型;这称为数组类型的*元素*类型。数组类型的元素类型必须是基本类型，类类型或接口类型。
     - `reference`值也可以是专用空引用的，没有对象的引用，这将在这里通过来表示`null`。该`null`引用最初没有运行时类型，但可以转换为任何类型。`reference`类型的默认值是`null`。
 
 
