--- a/Read/ReadKotlinWiki/01.基础语法/07.Null和判空深度介绍.md
+++ b/Read/ReadKotlinWiki/01.基础语法/07.Null和判空深度介绍.md
@@ -190,7 +190,7 @@
 #### 8.1 Java中判断方式
 - “防御式编程”大家应该不陌生，核心思想是不信任任何“外部”输入。
     - 不管是真实的用户输入还是其他模块传入的实参，具体点就是各种判空。创建一个方法需要判空，创建一个逻辑块需要判空，甚至自己的代码内部也需要判空（防止对象的回收之类的）。
-    ```
+    ``` java
     public void showToast(Activity activity) {
        if (activity == null) {
            return;
@@ -198,9 +198,9 @@
     }
     ```
 - 契约式编程。各个模块之间约定好一种规则，大家按照规则来办事，出了问题找没有遵守规则的人负责，这样可以避免大量的判空逻辑。Android 提供了相关的注解以及最基础的检查来协助开发者，示例如下：[博客](https://github.com/yangchong211/YCBlogs)
-    ```
+    ``` java
     public void showToast(@NonNull Activity activity) {
-       ......
+       
     }
     ```
     - 给 Activity 增加了 @NonNull 的注解，就是向所有调用这个方法的人声明了一个约定，调用方应该保证传入的 activity 非空。当然聪明的你应该知道，这是一个很弱的限制，调用方没注意或者不理会这个注解的话，程序就依然还有 NPE 导致的 crash 的风险。
@@ -214,7 +214,7 @@
         - 变量需要决定自己是否可为空，比如 private var goodsId: String ?= null，这样就是可接受 null
     - 传递阶段
         - 在变量传递阶段，必须保持“可空性”一致，比如形参声明是不为空的，那么实参必须本身是非空或者转为非空才能正常传递。示例如下：[博客](https://github.com/yangchong211/YCBlogs)
-        ```
+        ``` kotlin
         private var goodsId: String? = null
         private fun Main(){
             getName(goodsId!!)
@@ -244,8 +244,8 @@
             time?.toInt()
         }
         ```
-    - 得出结论
-        - 总的来说 Kotlin 为了解决 NPE 做了大量语言层级的强限制，的确可以做到减少 NPE 的发生。但这种既“契约式”（判空）又“防御式”（声明空与非空）的方案会让开发者做更多的工作，会更“麻烦”一点。
+- 得出结论
+    - 总的来说 Kotlin 为了解决 NPE 做了大量语言层级的强限制，的确可以做到减少 NPE 的发生。但这种既“契约式”（判空）又“防御式”（声明空与非空）的方案会让开发者做更多的工作，会更“麻烦”一点。
 
 
 #### 8.3 导致NPE的场景
