--- a/Read/ReadKotlinWiki/01.基础语法/08.lazy和lateinit懒加载.md
+++ b/Read/ReadKotlinWiki/01.基础语法/08.lazy和lateinit懒加载.md
@@ -3,6 +3,7 @@
     - 1.1 by lazy作用
     - 1.2 lazy使用场景
     - 1.3 作用范围
+    - 1.4 lazy使用原理
 - 02.lateinit介绍
     - 1.1 使用场景
     - 1.2 注意问题
@@ -22,7 +23,7 @@
 
 
 #### 1.2 lazy使用场景
-- by lazy本身是一种属性委托。属性委托的关键字是by。by lazy 的写法如下：
+- `by lazy`本身是一种属性委托。属性委托的关键字是by。`by lazy` 的写法如下：
     - 需要注意的是by lazy一般只能修饰val不变的对象，不能修饰var可变对象。
     ```
     //lazy 委托属性可以用于只读属性的惰性加载
@@ -54,10 +55,12 @@
         println("逗比------------$model")
     }
     ```
-- 以下以name属性为代表来讲解by lazy的原理，局部变量的初始化也是一样的原理。
-    - by lazy要求属性声明为val，即不可变变量，在java中相当于被final修饰。这意味着该变量一旦初始化后就不允许再被修改值了(基本类型是值不能被修改，对象类型是引用不能被修改)。{}内的操作就是返回唯一一次初始化的结果。
+- 以下以name属性为代表来讲解`by lazy`的原理，局部变量的初始化也是一样的原理。
+    - `by lazy`要求属性声明为`val`，即不可变变量，在`java`中相当于被`final`修饰。这意味着该变量一旦初始化后就不允许再被修改值了(基本类型是值不能被修改，对象类型是引用不能被修改)。{}内的操作就是返回唯一一次初始化的结果。
 
 
+#### 1.4 lazy使用原理
+- 待完善
 
 
 ### 02.lateinit介绍
@@ -100,7 +103,7 @@
 ### 03.by lazy和lateinit的区别
 - 区别如下
     - by lazy 修饰val的变量
-    - lateinit 修饰var的变量，且变量是非空的类型
+    - lateinit 修饰var的变量，且变量是非空的类型。可以进行二次赋值……
 - 两者的应用场景是略有不同的。
     - 虽然两者都可以推迟属性初始化的时间，但是lateinit var只是让编译期忽略对属性未初始化的检查，后续在哪里以及何时初始化还需要开发者自己决定。
     - by lazy真正做到了声明的同时也指定了延迟初始化时的行为，在属性被第一次被使用的时候能自动初始化。但这些功能是要为此付出一丢丢代价的。
