--- a/Read/ReadMeWiki/01.大型方案/05.串行线程方案的实践.md
+++ b/Read/ReadMeWiki/01.大型方案/05.串行线程方案的实践.md
@@ -1,15 +1,26 @@
 #### 目录介绍
+- 01.整体概述
+    - 1.1 项目背景
+    - 1.2 遇到问题
+    - 1.3 基础概念介绍
+    - 1.4 设计目标
+    - 1.5 产生收益分析
+- 02.线程任务须知
+    - 2.3 将异步转为同步
 
 
 
 
-
-
-
-
-
-
-
+### 02.线程任务须知
+#### 2.3 将异步转为同步
+- 场景说明
+    - 平时获取子线程返回结果以异步回调的方式获取返回到主线程，其实也可以通过某种方法转为同步返回。那么如何将这种异步回调改成同步式的回调？
+- 应用场景：
+    - 1.单个线程处理结果返回到主线程；2.多个子线程并发请求，最终合并返回结果到主线程
+- https://blog.csdn.net/u011082160/article/details/99441697
+- https://www.cnhackhy.com/106985.htm
+- https://blog.csdn.net/qq_43183022/article/details/89013885
+- https://github.com/Dreamaple/AsyncToSyncQueue
 
 
 
