--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -11,11 +11,14 @@
     - 2.3 存储该如何选择
     - 2.4 存储方案优缺点
     - 2.5 常见的缓存策略
+    - 2.6 存储如何优化
 - 03.存储方案原理
     - 3.1 Sp存储原理分析
     - 3.2 MMKV存储原理分析
     - 3.3 LruCache原理分析
     - 3.4 DiskLruCache分析
+    - 3.5 FastSp原理分析
+    - 3.6 HashMap存储分析
 - 04.通用缓存方案思路
     - 4.1 如何兼容不同缓存
     - 4.2 打造通用缓存Api
@@ -24,7 +27,8 @@
     - 4.5 缓存的阀值处理
     - 4.6 缓存的线程安全性
     - 4.7 缓存数据的迁移
-    - 4.8 各种缓存效率对比
+    - 4.8 缓存数据加密
+    - 4.9 各种缓存效率对比
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
