--- a/Read/ReadJavaWiki/08.类的加载/01.类加载的详细过程.md
+++ b/Read/ReadJavaWiki/08.类的加载/01.类加载的详细过程.md
@@ -3,7 +3,7 @@
 - 02.类的加载
 - 03.类的连接
 - 04.类的初始化
-- 05.类加载器
+- 05.类的卸载
 - 07.看几个案例题
 
 
@@ -12,6 +12,22 @@
     - 虚拟机把描述类的数据从Class文件加载到内存，并对数据进行校验，解析和初始化，最终形成可以被虚拟机直接使用的Java类型，这就是虚拟机的类加载机制（懒加载）。
 - 类加载过程
     - 加载--连接(验证，准备，解析)--初始化--使用--卸载
+- 类的生命周期
+    - 类加载的过程包括了加载、验证、准备、解析、初始化五个阶段。
+    - 在这五个阶段中，加载、验证、准备和初始化这四个阶段发生的顺序是确定的，而解析阶段则不一定，它在某些情况下可以在初始化阶段之后开始，这是为了支持Java语言的运行时绑定（也成为动态绑定或晚期绑定）。
+    - 另外注意这里的几个阶段是按顺序开始，而不是按顺序进行或完成，因为这些阶段通常都是互相交叉地混合进行的，通常在一个阶段执行的过程中调用或激活另一个阶段。
+- 下面介绍类加载每个阶段的任务： 
+    - 加载（Loading）：通过类的全限定名来获取定义此类的二进制字节流；将该二进制字节流所代表的静态存储结构转化为方法区的运行时数据结构，该数据存储数据结构由虚拟机实现自行定义；在内存中生成一个代表这个类的java.lang.Class对象，它将作为程序访问方法区中的这些类型数据的外部接口
+    - 验证（Verification）：确保Class文件的字节流中包含的信息符合当前虚拟机的要求，包括文件格式验证、元数据验证、字节码验证和符号引用验证
+    - 准备（Preparation）：为类变量分配内存，因为这里的变量是由方法区分配内存的，所以仅包括类变量而不包括实例变量，后者将会在对象实例化时随着对象一起分配在Java堆中；设置类变量初始值，通常情况下零值
+    - 解析（Resolution）：虚拟机将常量池内的符号引用替换为直接引用的过程
+    - 初始化（Initialization）：是类加载过程的最后一步，会开始真正执行类中定义的Java字节码。而之前的类加载过程中，除了在『加载』阶段用户应用程序可通过自定义类加载器参与之外，其余阶段均由虚拟机主导和控制
+
+
+#### 2.2 生命周期顺序图
+- 这7个阶段发生顺序如下图：
+    - ![](http://upload-images.jianshu.io/upload_images/3985563-0108cc612a217322.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+- **其中加载，验证，准备，解析及初始化是属于类加载机制中的步骤。注意此处的加载不等同于类加载**。如何理解这句话？
 
 
 
@@ -115,10 +131,6 @@
 
 
 
-
-
-
-
 ### 04.类的初始化
 #### 4.1 初始化说明
 - 什么时候初始化
@@ -190,83 +202,7 @@
     - 说明了调用静态方法没有对类进行实例化，所以静态类加载会被初始化。
 
 
-### 05.类加载器
-#### 5.1 类加载器说明
-- 什么是类加载器
-    - JVM的类加载是通过ClassLoader及其子类来完成的，虚拟机设计团队把加载动作放到JVM外部实现，以便让应用程序决定如何获取所需的类，JVM提供了3种类加载器：
-- 启动类加载器(Bootstrap ClassLoader)：
-    - 负责加载 `JAVA_HOME\lib`目录中的，或通过-Xbootclasspath参数指定路径中的，且被虚拟机认可（按文件名识别，如rt.jar）的类。
-- 扩展类加载器(Extension ClassLoader)：
-    - 负责加载 `JAVA_HOME\lib\ext `目录中的，或通过java.ext.dirs系统变量指定路径中的类库。
-- 应用程序类加载器(Application ClassLoader)：
-    - 负责加载用户路径（classpath）上的类库。
-- 自定义类加载器
-    * 高度灵活
-    * 实现热部署
-    * 代码加密
-- JVM通过双亲委派模型进行类的加载，当然我们也可以通过继承java.lang.ClassLoader实现自定义的类加载器。
-
-
-#### 5.2 举例一个小Demo
-- 案例代码如下所示
-    ```
-    /**
-     * 只加载当前包下的类，不是当前包下的交给上面的类加载器
-     * Created by Fant.J.
-     */
-    public class MyClassLoader {
-        ClassLoader classLoader = new ClassLoader() {
-    
-            @Override
-            public Class<?> loadClass(String name) throws ClassNotFoundException {
-                //拿出类的简单名称
-                String filename = name.substring(name.lastIndexOf(".") + 1) + ".class";
-    
-                InputStream ins = getClass().getResourceAsStream(filename);
-    
-                if (ins == null){
-                    return super.loadClass(name);
-                }
-                try {
-                    byte [] buff = new byte[ins.available()];
-                    ins.read(buff);
-                    // 将字节码转换成类对象
-                    return defineClass(name,buff,0,buff.length);
-                } catch (Exception e) {
-                    //
-                    throw new ClassNotFoundException();
-                }
-            }
-        };
-    }
-    ```
-- 在自定义的加载器中，将本包以外的类的加载工作都交给父类加载器：`return super.loadClass(name);`
-    ```
-    public abstract class Test {
-        public static void main(String[] args) throws ClassNotFoundException, IllegalAccessException, InstantiationException {
-            MyClassLoader myClassLoader = new MyClassLoader();
-            Object o = myClassLoader.classLoader.loadClass("com.jvm.classload.Son").newInstance();
-            System.out.println("Son类对象："+o.getClass());
-            System.out.println("Son父类对象："+o.getClass().getSuperclass());
-    
-            Object c = myClassLoader.classLoader.loadClass("com.jvm.classload.MyClassLoader").newInstance();
-            System.out.println("c对象的类加载器："+c.getClass().getClassLoader());
-            System.out.println("myClassLoader对象的类加载器："+myClassLoader.getClass().getClassLoader());
-        }
-    }
-    ```
-- 控制台输出：
-    ```
-    Son类对象：class com.jvm.classload.Son
-    Son父类对象：class com.jvm.classload.Parent
-    c对象的类加载器：com.jvm.classload.MyClassLoader$1@4dc63996
-    myClassLoader对象的类加载器：sun.misc.Launcher$AppClassLoader@18b4aac2
-    ```
-    - 我们可以发现，同样是MyClassLoader 这个对象，但是他们的类加载器不同，那他们就是不同的对象。
-- **拓展**：
-    - 1.通过一个类的全限定名来获取描述此类的二进制字节流
-    - 2.只有被同一个类加载器加载的类才可能会相等。相同的字节码被不同的类加载器加载的类不相等。
-    - 3.类的加载，会将其所有的父类都加载一遍，直到java.lang.Object。（因为Object是所有类的父类）
+### 05.类的卸载
 
 
 ### 07.看几个案例题
@@ -280,9 +216,8 @@
     }
     ```
 - 准备阶段和初始化阶段常量变化？
-    - 结果
-        - 在准备阶段value1和value2都等于0；
-        - 在初始化阶段value1和value2分别等于5和66；
+    - 在准备阶段`value1`和`value2`都等于0；
+    - 在初始化阶段`value1`和`value2`分别等于5和66；
 - 变量初始化过程？
     - 所有类变量初始化语句和静态代码块都会在编译时被前端编译器放在收集器里头，存放到一个特殊的方法中，这个方法就是<clinit>方法，即类/接口初始化方法，该方法只能在类加载的过程中由JVM调用；
     - 编译器收集的顺序是由语句在源文件中出现的顺序所决定的，静态语句块中只能访问到定义在静态语句块之前的变量；
