--- a/Read/ReadJavaWiki/08.类的加载/02.Java类加载器介绍.md
+++ b/Read/ReadJavaWiki/08.类的加载/02.Java类加载器介绍.md
@@ -1,35 +1,37 @@
 #### 目录介绍
 - 01.类加载器分类
-    - 1.1 类加载器的概述
-    - 1.2 类加载器的分类
-    - 1.3 类加载器工作机制
-- 02.类的生命周期
-    - 2.1 什么是类的生命周期
-    - 2.2 生命周期顺序图
-- 03.ClassLoader加载过程
+    - 1.1 类加载器概述
+    - 1.2 类加载器分类
+- 02.类加载器工作机制
+- 03.ClassLoader原理
     - 3.1 Classloader作用
-
+    - 3.2 源码分析
+    - 3.3 loadClass案例
+- 04.类加载器实践
+    - 4.1 类加载器实践分析
 
 
 ### 01.类加载器分类
-#### 1.1 类加载器的概述
+#### 1.1 类加载器概述
 - 什么是类加载
     - 负责读取 Java 字节代码，将.class文件加载到内存中，并转换成java.lang.Class类的一个实例对象；
 - 那么有人会问.class文件是哪里来的
     - 它是由javac编译器将java文件编译成.class文件的。
-- 类加载器的分类
-    - Bootstrap ClassLoader 根类加载器(引导类加载器)
-    - Extension ClassLoader 扩展类加载器
-    - System ClassLoader    系统类加载器
-    - Application ClassLoader   应用程序类加载器
-    - 自定义加载器，通过继承ClassLoader实现，一般是加载我们的自定义类
+- 为何需要类加载器
+    - JVM的类加载是通过ClassLoader及其子类来完成的，虚拟机设计团队把加载动作放到JVM外部实现，以便让应用程序决定如何获取所需的类，JVM提供了3种类加载器。
 - 类的加载详细定义
     - 类进行初始化，当程序要使用某个类时，如果该类还未被加载到内存中，则系统会通过加载，连接，初始化三步来实现对这个类进行初始化。
     - 更加详细一点说，类的加载指的是将类的.class文件中的二进制数据读入到内存中，将其放在运行时数据区的方法区内，然后在堆区创建一个java.lang.Class对象，用来封装类在方法区内的数据结构。类的加载的最终产品是位于堆区中的Class对象，Class对象封装了类在方法区内的数据结构，并且向Java程序员提供了访问方法区内的数据结构的接口。
     - 在Java语言里，类型的加载、连接和初始化过程都是在程序运行期间完成的，这种策略虽然会令类加载时稍微增加一些性能开销，但是会为Java应用程序提供高度的灵活性，Java里天生可以动态扩展的语言特性就是依赖运行期动态加载和动态连接这个特点来实现的。
 
 
-#### 1.2 类加载器的作用
+#### 1.2 类加载器分类
+- 类加载器的分类
+    - Bootstrap ClassLoader 根类加载器(引导类加载器)
+    - Extension ClassLoader 扩展类加载器
+    - System ClassLoader    系统类加载器
+    - Application ClassLoader   应用程序类加载器
+    - 自定义加载器，通过继承ClassLoader实现，一般是加载我们的自定义类
 - Bootstrap ClassLoader 根类加载器
     - 也被称为引导类加载器，负责Java核心类的加载；比如System,String等。在JDK中JRE的lib目录下rt.jar文件中
     - 由C++语言实现（针对HotSpot）,负责将存放在<JAVA_HOME>\lib目录或-Xbootclasspath参数指定的路径中的类库加载到内存中，即负责加载Java的核心类。
@@ -42,39 +44,21 @@
 
 
 
-#### 1.3 类加载器工作机制
-- 是虚拟机把描述类的数据从Class文件加载到内存，并对数据进行校验、转换解析和初始化，最终形成可被虚拟机直接使用的Java类型的过程。
+### 02.类加载器工作机制
+- 虚拟机把描述类的数据从Class文件加载到内存，并对数据进行校验、转换解析和初始化，最终形成可被虚拟机直接使用的Java类型的过程。
 - 另外，类型的加载、连接和初始化过程都是在程序运行期完成的，从而通过牺牲一些性能开销来换取Java程序的高度灵活性。
-
-
-### 02.类的生命周期
-#### 2.1 什么是类的生命周期
-- 类加载的过程包括了加载、验证、准备、解析、初始化五个阶段。
-- 在这五个阶段中，加载、验证、准备和初始化这四个阶段发生的顺序是确定的，而解析阶段则不一定，它在某些情况下可以在初始化阶段之后开始，这是为了支持Java语言的运行时绑定（也成为动态绑定或晚期绑定）。
-- 另外注意这里的几个阶段是按顺序开始，而不是按顺序进行或完成，因为这些阶段通常都是互相交叉地混合进行的，通常在一个阶段执行的过程中调用或激活另一个阶段。
-- 下面介绍类加载每个阶段的任务： 
-    - 加载（Loading）：通过类的全限定名来获取定义此类的二进制字节流；将该二进制字节流所代表的静态存储结构转化为方法区的运行时数据结构，该数据存储数据结构由虚拟机实现自行定义；在内存中生成一个代表这个类的java.lang.Class对象，它将作为程序访问方法区中的这些类型数据的外部接口
-    - 验证（Verification）：确保Class文件的字节流中包含的信息符合当前虚拟机的要求，包括文件格式验证、元数据验证、字节码验证和符号引用验证
-    - 准备（Preparation）：为类变量分配内存，因为这里的变量是由方法区分配内存的，所以仅包括类变量而不包括实例变量，后者将会在对象实例化时随着对象一起分配在Java堆中；设置类变量初始值，通常情况下零值
-    - 解析（Resolution）：虚拟机将常量池内的符号引用替换为直接引用的过程
-    - 初始化（Initialization）：是类加载过程的最后一步，会开始真正执行类中定义的Java字节码。而之前的类加载过程中，除了在『加载』阶段用户应用程序可通过自定义类加载器参与之外，其余阶段均由虚拟机主导和控制
-
-#### 2.2 生命周期顺序图
-- 这7个阶段发生顺序如下图：
-    - ![](http://upload-images.jianshu.io/upload_images/3985563-0108cc612a217322.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- **其中加载，验证，准备，解析及初始化是属于类加载机制中的步骤。注意此处的加载不等同于类加载**。如何理解这句话？
+- JVM通过双亲委派模型进行类的加载，当然我们也可以通过继承java.lang.ClassLoader实现自定义的类加载器。
 
 
 
-### 03.ClassLoader加载过程
+
+### 03.ClassLoader原理
 #### 3.1 Classloader作用
 - Classloader的作用，概括来说就是将编译后的class装载、加载到机器内存中，为了以后的程序的执行提供前提条件。
 - 每个被ClassLoader加载的class文件，最终都会以Class类的实例被程序员引用，我们可以把Class类当作是普通类的一个模板，JVM根据这个模板生成对应的实例，最终被程序员所使用。
 
 
-
-
-
+#### 3.2 源码分析
 - 和 Java 一样都遵循双亲委托机制。
     ``` java
     protected Class<?> loadClass(String name, boolean resolve) 
@@ -163,42 +147,7 @@
     ```
 
 
-
-
-
-### 02.loadClass分析
-- 源码代码如下所示。
-    ```
-    public Class<?> loadClass(String name) throws ClassNotFoundException {
-        return loadClass(name, false);
-    }
-    
-    protected Class<?> loadClass(String name, boolean resolve)
-        throws ClassNotFoundException
-    {
-            // First, check if the class has already been loaded
-            Class<?> c = findLoadedClass(name);
-            if (c == null) {
-                try {
-                    if (parent != null) {
-                        c = parent.loadClass(name, false);
-                    } else {
-                        c = findBootstrapClassOrNull(name);
-                    }
-                } catch (ClassNotFoundException e) {
-                    // ClassNotFoundException thrown if class not found
-                    // from the non-null parent class loader
-                }
-    
-                if (c == null) {
-                    // If still not found, then invoke findClass in order
-                    // to find the class.
-                    c = findClass(name);
-                }
-            }
-            return c;
-    }
-    ```
+#### 3.3 loadClass案例
 - 关于loadClass方法
     ```
     Class<?> loadClass(String name)
@@ -229,6 +178,66 @@
     }
     ```
     - 不会输出"test静态代码段"的（静态代码块是跟初始化绑定的）。
+
+
+
+### 04.类加载器实践
+#### 4.1 类加载器实践分析
+- 案例代码如下所示
+    ```
+    /**
+     * 只加载当前包下的类，不是当前包下的交给上面的类加载器
+     */
+    public class MyClassLoader {
+        ClassLoader classLoader = new ClassLoader() {
+            @Override
+            public Class<?> loadClass(String name) throws ClassNotFoundException {
+                //拿出类的简单名称
+                String filename = name.substring(name.lastIndexOf(".") + 1) + ".class";
+                InputStream ins = getClass().getResourceAsStream(filename);
+                if (ins == null){
+                    return super.loadClass(name);
+                }
+                try {
+                    byte [] buff = new byte[ins.available()];
+                    ins.read(buff);
+                    // 将字节码转换成类对象
+                    return defineClass(name,buff,0,buff.length);
+                } catch (Exception e) {
+                    //
+                    throw new ClassNotFoundException();
+                }
+            }
+        };
+    }
+    ```
+- 在自定义的加载器中，将本包以外的类的加载工作都交给父类加载器：`return super.loadClass(name);`
+    ```
+    public abstract class Test {
+        public static void main(String[] args) throws ClassNotFoundException, IllegalAccessException, InstantiationException {
+            MyClassLoader myClassLoader = new MyClassLoader();
+            Object o = myClassLoader.classLoader.loadClass("com.jvm.classload.Son").newInstance();
+            System.out.println("Son类对象："+o.getClass());
+            System.out.println("Son父类对象："+o.getClass().getSuperclass());
+    
+            Object c = myClassLoader.classLoader.loadClass("com.jvm.classload.MyClassLoader").newInstance();
+            System.out.println("c对象的类加载器："+c.getClass().getClassLoader());
+            System.out.println("myClassLoader对象的类加载器："+myClassLoader.getClass().getClassLoader());
+        }
+    }
+    ```
+- 控制台输出：
+    ```
+    Son类对象：class com.jvm.classload.Son
+    Son父类对象：class com.jvm.classload.Parent
+    c对象的类加载器：com.jvm.classload.MyClassLoader$1@4dc63996
+    myClassLoader对象的类加载器：sun.misc.Launcher$AppClassLoader@18b4aac2
+    ```
+    - 我们可以发现，同样是MyClassLoader 这个对象，但是他们的类加载器不同，那他们就是不同的对象。
+- **拓展**：
+    - 1.通过一个类的全限定名来获取描述此类的二进制字节流
+    - 2.只有被同一个类加载器加载的类才可能会相等。相同的字节码被不同的类加载器加载的类不相等。
+    - 3.类的加载，会将其所有的父类都加载一遍，直到java.lang.Object。（因为Object是所有类的父类）
 
 
 
