--- a/Read/ReadJavaWiki/08.类的加载/03.类初始化操作分析.md
+++ b/Read/ReadJavaWiki/08.类的加载/03.类初始化操作分析.md
@@ -15,11 +15,10 @@
 
 
 
-
 ### 01.为何需要构造器
 #### 1.1 构造器的背景
 - 构造器有助于减少错误，并使代码更易于阅读。
-    - 从概念上讲，“初始化”与“创建”是彼此独立的，然而在上面的代码中，你找不到对initialize()方法的调用。
+    - 从概念上讲，“初始化”与“创建”是彼此独立的，然而在上面的代码中，你找不到对`initialize()`方法的调用。
     - 在Java中，“初始化”和“创建”捆绑在一起，两者不能分离。
 
 
@@ -31,10 +30,10 @@
 
 #### 1.3 构造器用于初始化
 - 创建对象时，如果其类具有构造器，Java就会在用户有能力操作对象之前自动调用相应的构造器，从而保证了初始化的进行。
-    - 不接受任何参数的构造器叫做默认构造器，Java文档中通常使用术语无参构造器。
+    - 不接受任何参数的构造器叫做默认构造器，`Java`文档中通常使用术语无参构造器。
 - 假设类`Tree`有一个构造器，它接受一个整型变量来表示树的高度，那它就能这样创建一个`Tree`对象。
     - Tree t = new Tree（12）；
-    - 如果Tree（int）是Tree类中唯一的构造器，那么编译器将不会允许你以其他任何方式创建Tree对象。
+    - 如果Tree（int）是Tree类中唯一的构造器，那么编译器将不会允许你以其他任何方式创建`Tree`对象。
 - 构造器是一种特殊类型的方法，因为它没有返回值，这与返回值为空明显不同。
     - 对于空返回值，尽管方法本身不会自动返回什么，但仍选择让它返回别的东西。构造器则不会返回任何东西你别无选择（new表达式确实返回了对新建对象的引用，但构造器本身并没有任何返回值）。
 
