--- a/Read/ReadShareWiki/01.出发启程/00.书的序言和介绍.md
+++ b/Read/ReadShareWiki/01.出发启程/00.书的序言和介绍.md
@@ -42,7 +42,7 @@
 
 
 ### 05.布置作业要实践
-- 布置作业。一旦有了作业，就会督促我们更好地去思考、去反思。现在的慢，才是将来的快。
+- 布置作业。一旦有了作业，就会督促我们更好地去思考、去反思。现在的慢，才是将来的快。想一想读书的时候，为什么学习的知识点很熟悉，那是因为课前预习，课后演练，这样可以让学习的东西印象更加深刻。
 
 
 
