--- a/Read/ReadShareWiki/01.出发启程/01.需求层次的模型.md
+++ b/Read/ReadShareWiki/01.出发启程/01.需求层次的模型.md
@@ -4,7 +4,7 @@
 - 03.自己在那个层次
 - 04.不同阶段的追求
 - 05.成长生涯的愿景
-
+- 06.人生的马拉赛跑
 
 
 ### 01.有过自己的梦想
@@ -21,20 +21,20 @@
 - 4）尊重需要，包括要求受到别人的尊重和自己具有内在的自尊心。
 - 5）自我实现需要，指通过自己的努力，实现自己对生活的期望，从而对生活和工作真正感到很有意义。
 - 人在满足了基本的需求之后，就要去实现更高的需求和目标。一个人可以有自我实现的愿望，但要达到自我实现的境界，成为一个自我实现的人，却不是每个人都能办到的，这种人也只是少数而已。
-- 
+
 
 
 ### 03.自己在那个层次
-
+- 想一想现在的自己是处在哪一个层次，自己的梦想又是上升到哪一个层次？人们总是优先满足生理需求，而自我实现的需求则是最难以满足的。
+- 人们会一直不停地追求各种目标，当这种需要得到满足以后，又会有其他需要，继续去寻找其他新的目标。
 
 
 ### 04.不同阶段的追求
 - 在人生的不同阶段，会产生不同层次的目标需求。
-- 在人生的早期，我们努力学习，考一个好大学，拥有一技之长，找一份好工作，带来更高薪的收入，这很大程度都是为了满足图中最底层的生存需求，让生活变得更舒适美好。
-- 成长拼搏数年，事业小成，工作稳定，有房，有车，有娃后，第二层次，也就是安全的需求开始凸显。有人在这阶段开始给自己、父母、老婆、孩子都买人寿保险，开始考虑理财，投资甚至强身健体。然而处在这个阶段时，我却有一种强烈的不安全感，这也许和长年的程序员职业经历养成的习惯也有关系。
-- 我们做系统应用服务时总是需要考虑各种意外和异常事件发生，一般至少提供主备方案。于人生而言，保持持续学习，与时俱进，追求成长，这其实也是一种主备方案：主，指当前支撑生活的工作；备，是通过持续学习，同步成长，保持核心能力的不断积累与时间的付出来获得一份备份保障，以避免 “主” 出现意外时，“备” 的能力已被时代淘汰。
-- 需求金字塔底部两层属于物质层次的 “经济基础”，而再往上则进入了更高精神层次的 “上层建筑”。就个体而言，高层次需求要比低层次需求具有更大的价值。在 “生存” 和 “安全” 基本满足的保障基础之上，我们才会更从容地向内求，更多地探求内心，进而向外索，对外去探索、发现和建立不同的圈层关系，以满足上层的社交 “归属”、获得 “尊重” 与 “自我实现” 的需求。
-- 马斯洛把底层的四类需求：生存、安全、归属、尊重归类为 “缺失性” 需求，它们的满足需要从外部环境去获得。而最顶层的“自我实现” 则属于 “成长性” 需求。成长就是自我实现的过程，成长的动机也来自于 “自我实现” 的吸引。就像很多植物具有天生的向阳性，而对于人，我感觉也有天生的 “自我实现” 趋向性。
+- 在人生的早期，我们努力学习，目标是考一个好大学，拥有一技之长，找一份好工作，带来更高薪的收入，这很大程度都是为了满足图中最底层的生存需求，让生活变得更舒适美好。
+- 成长拼搏数年，事业小成，工作稳定，目标是有房，有车，结婚生子，第二层次，也就是安全的需求开始凸显。处在这个阶段时，有时候有一种强烈的不安全感和危机感，生活的压力逐渐加大。
+- 带有主备方案：主，指当前支撑生活的工作；备，是通过持续学习，同步成长，保持核心能力的不断积累与时间的付出来获得一份备份保障，以避免 “主” 出现意外时，“备” 的能力已被时代淘汰。
+- 马斯洛把底层的四类需求：生存、安全、归属、尊重归类为 “缺失性” 需求，它们的满足需要从外部环境去获得。而最顶层的“自我实现” 则属于 “成长性” 需求。成长就是自我实现的过程，成长的动机也来自于 “自我实现” 的吸引。
 - 人生最激荡人心的时刻，就在于自我实现的创造性过程中，产生出的一种 “高峰体验” 感。正因为人所固有的需求层次模型，我们才有了愿望，愿望产生目标，目标则引发计划。
 
 
@@ -48,10 +48,8 @@
 - 温度：背后的价值观是自由与快乐。代表性关键词有：自我认同、精彩程度。
 - 每个人的人生发展路线都会有这四个维度，只是不同人的偏好、愿望和阶段不同导致了在四个维度分布重心的差异。在不同维度的选择，都代表了不一样的 “生涯”，每一种 “生涯” 都需要一定程度的计划与努力。
 - 虽有四种维度，四个方向，但不代表只能选其一。虽然我们不太可能同时去追求这四个维度，但可以在特定的人生不同阶段，在其中一个维度上，给自己一个去尝试和探索的周期。
-- 所以，这就有了选择，有了计划。而计划会有开始，也会有结束，我们需要计划在人生的不同阶段，重点开始哪个维度的追求，以及大概需要持续的周期。人生本是多维的，你会有多努力、多投入来设计并实现自己的生涯规划呢？不计划和努力一下，也许你永远无法知道自己的边界和所能达到的程度。
-
-
-
+- 所以，这就有了选择，有了计划。而计划会有开始，也会有结束，我们需要计划在人生的不同阶段，重点开始哪个维度的追求，以及大概需要持续的周期。
+- 人生本是多维的，你会有多努力、多投入来设计并实现自己的生涯规划呢？不计划和努力一下，也许你永远无法知道自己的边界和所能达到的程度。
 
 
 
