--- a/Read/ReadShareWiki/01.出发启程/04.要带上技能地图.md
+++ b/Read/ReadShareWiki/01.出发启程/04.要带上技能地图.md
@@ -1,28 +1,57 @@
 #### 目录介绍
 - 01.为何要技能地图
 - 02.技能的不同维度
+- 03.绘制自己的地图
+- 04.将技能地图拆分
+- 05.技能地图的演变
 
+
+### 01.为何要技能地图
+- 有的人经常会说一定要找到一份月薪多少多少的工作，争取做到什么什么职位，未来要赚多少的钱。耐心听完“远大蓝图”，然后想一想：“凭什么达到自己的目标？你的资本是什么？”
+- 如果是你，你该怎么回答这个问题？有着自己的伟大抱负，你有没有想到，要实现这些目标，你的资本是什么？**对于很多已经身在职场的朋友而言，你晋升的资本又是什么**？　　
+- 人生在发展过程中，很多时候都需要毫不犹豫地向别人展示自己的实力，要敢于展示，善于展示，拥有自己的技能地图，这就是“亮剑”。
+- 既然具备了“亮剑”的意识，那么，下一步你就要考虑到亮什么剑：我到底拿什么资本给人家看？“亮剑”的资本又在哪里？因此，我们需要绘制自己的技能地图，不断地完善地图上的点……
 
 
 
 ### 02.技能的不同维度
-- 在技能地图中，需要先开启和点亮哪些部分呢？回顾过去的经历并结合现实的需要，可以从如下三个不同程度的维度来说明：了解；掌握；精通。
-- 掌握，意味着是一开始就要求熟练掌握的硬技能，这是生存之本。而至于掌握的深度，是动态的，倒是可以在行进过程中不断去迭代加深。
+- 在技能地图中，需要先开启和点亮哪些部分呢？回顾过去的经历并结合现实的需要，可以从如下四个不同程度的维度来说明：了解；掌握；熟练；精通。
 - 了解，相对掌握不是必需，但也需要达到知其然的程度，甚至知其所以然更好。
-- 精通，相比掌握更进一步。比如你做了某个方案，你还要知道为什么这样做，和其他方案对比优缺点分析，遇到那么困难以及如何解决等。
+- 掌握，意味着是一开始就要求熟练掌握的硬技能，这是生存之本。而至于掌握的深度，是动态的，倒是可以在行进过程中不断去迭代加深。
+- 熟练，在你掌握一门技能或者某个知识点的情况下，还要经过大量的训练，并且把东西做好，才能让你把东西吸收。
+- 精通，相比熟练更进一步。比如你做了某个方案，你还要知道为什么这样做，和其他方案对比优缺点分析，遇到那么困难以及如何解决等。
+
+
+### 03.绘制自己的地图
+#### 3.1 基础能力
+- 基础能力：具备大型规模项目的把控和设计能力，技术上具备完全把握一个技术方向的能力，并擅长将大规模项目拆解成多向中型规模的项目，并保证产品业务能达成预期的目标。具备跨团队资源协调，具备计划制定与风险控制能力。
+
+
+#### 3.2 通用能力
+- 影响力，能达到部门级范围影响力以及较好的口碑。
+- 领导力：能够预见和管理项目风险，协调团队资源，推进项目上线。
+- 协调力：项目涉及跨团队资源协调，具备计划制定与风险控制能力。
+- 自驱力：具备很强的驱能力，能在无人督促下自我管理，不断的去完善和优化。
+- 组织力：有一定的组织能力，能凝聚团队中不同角色，提高团队的战斗力和产出。
+- 向上管理：有良好的向上管理意识，能和上级建立良好的沟通、反馈、建议途径，能在项目的一些重要节点以及重要事件上及时透传有价格的信息。
+
+
+#### 3.3 专业能力
+- 专业技能：具备全面的技术规划能力，了解项目和产品自己领域绝大大多的技术原理和实现，深度的了解业务。
+- 创新能力：有模块级的关键的技术决策或者创新点，对业务发展有较大促进作用。善于发现和总结系统问题，并给出解决方案，带来产品功能的创新。
+- 产品思维：能够深入了解产品需求，并能综合权衡产品需求、体验与技术实现，从技术侧给产品合理的建议，在产品开过程中发挥技术影响力。
+- 技术规划能力：能够把握具体产品方向的研发工作，能制定和推动所负责产品线的业务规划，产出对于团队业务指标产生直接影响（如收入，PV，资源使用率，研发效率等）。能采用合适的技术，解决具体的技术难题，消除对产品的不利影响。
 
 
 
+### 04.将技能地图拆分
+- 由于技能地图上罗列的都是能力的抽象，在实际的生活中，还需要将技能具体化，这样做的目的是为了更加方便自己去落实和实践。
+- 举一个简单的例子，针对移动端开发来说，拥有扎实的Java基础，那么具体化是要求掌握面向对象思想，熟练运用数据结构，掌握并发的知识等等，这就是将抽象能力具体化。
+- 针对每一个大的能力抽象，尽可能的把它具体化，这是一个长期不断迭代优化的事项，因此这块可以做一个长期主义者。逐步去完善技能地图的拆分工作。
 
 
 
-
-### 02.要有亮剑的资本
-- 有的大学生经常会说毕业之后一定要找到一份月薪多少多少的工作，争取做到什么什么职位。这时候我总是会耐心听完他们的“远大蓝图”，然后问一句：“你凭什么达到你的目标？你的资本是什么？”然后他就会哑口无言。　
-- 很多人和这位大学生一样，有着自己的伟大抱负，但是大学四年下来，你有没有想到，要实现这些目标，你的资本是什么？**对于很多已经身在职场的朋友而言，你晋升的资本又是什么**？　　
-- 人生在发展过程中，很多时候都需要毫不犹豫地向别人展示自己的实力，要敢于展示，善于展示，这就是“亮剑”。因为这年头，酒香也怕巷子深，是金子未必会发光。相反，发光的倒是那些碎玻璃、烂瓶子。中国什么都缺，就是不缺人。茫茫人海，如果你一直都谦虚地默默无闻，那么，你就大错特错了。　
-- **既然具备了“亮剑”的意识，那么，下一步你就要考虑到亮什么剑：我到底拿什么资本给人家看**？对于职场上的朋友而言，你“亮剑”的资本又在哪里？你的业绩提升了吗？你的能力提升了吗？你在一年内看过多少本对自己的职业有益的书籍？你参加过几次培训班来为自己充电？如果没有，你又凭什么让老板为你加工资？靠抱怨？你肯定会提前被职场淘汰出局！
-
+### 05.技能地图的演变
 
 
 
