--- a/Read/ReadShareWiki/01.出发启程/05.经营好自我公司.md
+++ b/Read/ReadShareWiki/01.出发启程/05.经营好自我公司.md
@@ -10,14 +10,14 @@
 
 
 ### 01.对待工作的态度
-- 不知道你有没有注意到，关于如何对待工作，现在社交媒体上有两种对立的思想。一种是所谓的“奋斗党”，对工作充满热情，会主动想办法甚至加班加点去完成工作、解决问题，认为人生因为拼搏奋斗而变得更加有意义；一种是所谓的“咸鱼党”，秉持着给多少钱干多少事儿的态度，多出一分力都觉得自己亏了，觉得咸鱼的人生才是真正为自己活着。
+- 不知道你有没有注意到，关于如何对待工作，大约有两种对立的思想。一种是所谓的“奋斗党”，对工作充满热情，会主动想办法甚至加班加点去完成工作、解决问题，认为人生因为拼搏奋斗而变得更加有意义；一种是所谓的“咸鱼党”，秉持着给多少钱干多少事儿的态度，多出一分力都觉得自己亏了，觉得咸鱼的人生才是真正为自己活着。
 - 这两种想法，其实都是自己的人生选择，但它们背后的核心思想是“我在为谁而工作”。
 
 
 
 ### 02.我在为谁而工作
 - 换一个视角，把自己当成一家公司一样来经营，经营自己的工作和人生，可能就会有完全不同的体会。在这个视角下，老板就是你的客户，你的工作就是你为客户提供的产品或服务，而跳槽就是换客户。
-- 你想要把自己的人生公司经营成什么样呢？怎么做才能经营好自己的人生公司呢？你可能需要学会明确自己的核心价值，为自己设定方向和目标，确定自己的工作流程、规范和原则，建立自己的人脉关系，掌控自己的资金流等等，全权为自己负责。
+- 想要把自己的人生公司经营成什么样呢？怎么做才能经营好自己的人生公司呢？可能需要学会明确自己的核心价值，为自己设定方向和目标，确定自己的工作流程、规范和原则，建立自己的人脉关系，掌控自己的资金流等等，全权为自己负责。
 
 
 
@@ -33,6 +33,7 @@
 - 我们经营自己一般都要持续经营几十年之久，为了保证“基业长青”，还得围绕自己的主攻方向，努力打造自己的护城河。护城河可以是卓越的技术、专业的知识、深厚的经验、独特的资源、有影响力的个人品牌、优质的人脉网络、优秀的沟通协调能力、对未来的敏锐洞察等等。
 - 老板很苛刻，待遇很糟糕，我不是说你不可以跳槽，尽量让自己的简历好看一点，所以，哪怕在一个烂公司里，尽量做一些有价值的项目，做一些有价值的工作，经受一些技术挑战，不要总觉得自己吃了亏。说世间无伯乐，你没有努力和付出过，再好的伯乐也看不见你。
 - 不断加强自己的竞争性优势，让自己人生公司的越开越顺畅，选择也就会越来越多，比如当你对当前的客户不满意时，你就能随时终止这段合作关系，换一家客户。
+
 
 
 ### 05.做事一定要靠谱
