--- a/Read/ReadMeWiki/01.大型方案/04.线程池封装设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/04.线程池封装设计实践.md
@@ -7,12 +7,16 @@
     - 1.5 产生收益分析
 - 02.线程池基础知识
     - 2.1 为何有线程池
+    - 2.2 如何管理线程
+    - 2.3 线程池生命周期
+    - 2.4 
 - 03.线程分析
     - 3.1 
     - 3.7 
     - 3.8 多线程并发优化
 - 04.线程池封装思路
     - 4.1 封装总体思路
+    - 4.2 
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
