--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -12,6 +12,7 @@
 - 03.蓝牙实践思路
     - 3.1 蓝牙最简单实践
     - 3.2 一些核心类说明
+    - 3.3 简单开发的步骤
 - 04.蓝牙实践坑
 - 05.方案设计
     - 5.1 整体架构图
@@ -37,6 +38,7 @@
 
 
 #### 1.3 基础概念介绍
+- 蓝牙现在还分经典蓝牙、低功耗蓝牙和双模蓝牙。
 
 
 #### 1.4 开发设计目标
@@ -108,6 +110,24 @@
 - BluetoothHealthCallback：用于实现 BluetoothHealth 回调的抽象类。您必须扩展此类并实现回调方法，以接收关于应用注册状态和蓝牙通道状态变化的更新内容。
 - BluetoothHealthAppConfiguration：表示第三方蓝牙健康应用注册的应用配置，该配置旨在实现与远程蓝牙健康设备的通信。
 - BluetoothProfile.ServiceListener：当 BluetoothProfile 进程间通信 (IPC) 客户端连接到运行特定配置文件的内部服务或断开该服务连接时，向该客户端发送通知的接口。
+
+
+
+#### 3.3 简单开发的步骤
+- 总体流程：
+    - 发现蓝牙->配对蓝牙->连接蓝牙->数据交互
+- 第一步：设置蓝牙
+    - 首先需要动态申请蓝牙和定位权限，否则无法获取到蓝牙列表数据。
+    - 然后检查设备是否支持蓝牙，并不是所有的Android 设备都支持蓝牙，所以在使用之前，检测当前设备是否支持蓝牙。
+    - 开启蓝牙，先检测蓝牙是否打开。没有打开则提示用户打开，或者直接打开。
+- 第二步：查找设备
+    - 设置可被发现，蓝牙打开后，要将自身设置为可以被周边蓝牙搜索到，以便可以进行下一步操作。蓝牙默认可被周边设备在120秒内搜索到，最长设置不过300秒。
+    - 收集周边蓝牙设备，通过注册广播监听，对发现的蓝牙设备添加到集合中。
+- 第三步：连接设备
+    - 获取设备详情，获取蓝牙列表之后，点击对应的蓝牙，进入蓝牙详情。一个BluetoothDeviced对象代表着一个周边蓝牙设备，通过该对象，可以获取该蓝牙设备的名称，绑定状态，Mac地址，uuid等。
+    - 未配对蓝牙设备通过mDevice.createBond();进行配对。
+- 第四步：管理连接后数据传递
+    - 配对成功后，通过BluetoothDevice的createRfcommSocketToServiceRecord()方法和蓝牙设备连接，连接成功会返回BluetoothSocket对象，进而获得输入输出流，进行数据交互。
 
 
 
