--- a/Read/ReadShareWiki/06.职场总结/02.职场晋升的规则.md
+++ b/Read/ReadShareWiki/06.职场总结/02.职场晋升的规则.md
@@ -64,6 +64,8 @@
 - 掌握了成长原则之后，你是不是又像“打了鸡血”一样，准备好好学习，提升几项技能了呢？别着急，先给你讲一个真实的故事。有一次，一个老同学问我：“怎么学习编译原理的？”我觉得有点奇怪，因为他是做Android业务开发的，怎么会想到要学编译原理呢？而且用到的时候很少，学的时间会很长，但是却跟工作没什么关系，注意学习编译原理并不能让你把开发做得更好，或者给你的业务带来新的有用的功能。
 - 换句话说，如果从晋升角度考虑，他学习的技能无法为当前的公司创造价值，这六个月的时间其实白白浪费掉了。为什么我会这么说呢？其实你站在公司的角度来看，就很好理解了。
 - **公司设计职级体系的初衷，是为了衡量不同员工的能力级别，然后根据级别来制定相应的薪酬、福利、管理等制度，同时鼓励员工尽量提升自己的能力，为公司产出更大的价值。这里面有两个关键点，能力级别和公司价值，但是大部分人都只关注了能力级别，而忽略了公司价值这个点**。
+- 工作不是学术，企业也不是学校，需要的是投入与产出，所以从学习的优先级上，项目需求>公司愿景>个人爱好。项目需求是最根本的需求，也是保证你工资、绩效的基础；在项目的基础上，我们的技术要结合公司的发展与技术愿景，也只有与公司的发展上一致了，你才有机会能够爬上管理层；最后才是个人的兴趣爱好。
+
 
 
 ##### 1.3.1 晋升和面试区别
