--- a/Read/ReadShareWiki/07.底层思维/03.感知能力的提升.md
+++ b/Read/ReadShareWiki/07.底层思维/03.感知能力的提升.md
@@ -4,6 +4,7 @@
 - 03.感知能力的分类
 - 04.外在的感知能力
 - 05.内在的感知能力
+- 06.把控自己的情绪
 - 10.今天起改变三点
 - 12.关于课后的作业
 
@@ -57,6 +58,15 @@
 - 对自然界的生物充满敬畏。一个高感知、对生命充满敬畏的人，会更加“惜福”。他知道，生命得来不易，“可以活着”本身就是一件特别美好的事情。
 - 现在的人物质条件特别好，不缺任何东西。由于物质上的过度丰裕，导致一些人没有感恩的心，这会在很大程度上导致幸福感较低。
 - 感恩不等于“谢谢”。感恩是什么呢？很多人平时都会教我们：“你要说‘谢谢’，你怎么没说‘谢谢’呢？”事实上，感恩不等于“谢谢”。许多人张口闭口都会说“谢谢”，但是他其实只是说说而已，并不明白“感恩”的含义。“谢谢”是非常容易教的，但是要让人真正拥有一颗感恩的心却不容易。不要把“谢谢”变成“鹦鹉学语”，去理解“谢谢”背后的实际意义，而不是让“谢谢”流于形式。
+
+
+### 06.把控自己的情绪
+- 现在大家都闭上眼睛想一下，你工作时和伙伴们一起做一个项目，你是主要负责人，辛辛苦苦熬夜一周，赶出了一份特别好的报告。但第二天去分享成果的是你的同事，老板赏识的也是你的同事，对他大力表扬。这时你会有什么反应？我相信每个人的反应是不同的。
+- 有的人马上生气：“怎么可以这样？”有的人可能直接跟同事大吵大闹，去讲理：“你为什么抢了我的功劳？这个公司太不公平了！”。
+- 有的人会生闷气，在心里想：“吃了个哑巴亏。”也觉得很郁闷：“在这个公司干活儿没劲，我跳槽吧，这个公司什么都不好。”
+- 还有一种人，当下会生气，但是马上就想道：“要找领导谈谈，因为要给自己争取利益。”接下来他就会想：“跟领导谈时要说什么？”因为光去抱怨情绪没用，跟领导谈话的目的是要解决问题。然后，他就会说：“我做了什么？我的预期是什么？我需要从领导那里得到的支持是什么？”
+- 相信大家在工作中一定遇到过这3种人，说不定自己就是其中的某一类人。不管在职场上还是生活中，光宣泄情绪没有用。很多人到事后，反而会感到后悔、郁闷，觉得没解决问题，发泄过后会问自己：“如果重新来过，我应该怎样？”你会用同理心去想：“我要找老板去谈，老板希望得到的信息是什么？”你会进行计划：“既然要去谈，要争取的是自己的利益，那我应该一步一步怎么谈？”你也会进行自我控制，会告诉自己：“生气没用，所以我要管理好自己的情绪。”然后进行思考。
+
 
 
 
