--- a/Read/ReadShareWiki/06.职场总结/05.职场焦虑需面对.md
+++ b/Read/ReadShareWiki/06.职场总结/05.职场焦虑需面对.md
@@ -1,7 +1,8 @@
 #### 目录介绍
 - 02.嫌弃工作太琐杂
+- 03.技术上一些困惑
 - 04.要让进度被关注
-
+- 09.开拓下技能思维
 
 
 ### 02.嫌弃工作太琐杂
@@ -11,11 +12,23 @@
 - 曾抱怨过：“我们领导每天都让我做这做那，而且很多事情都是重复的，烦都烦死了，您说我该怎么办啊？”你在第一次执行时是不是哪里没有做好呢？领导是不是因为对之前的执行结果不满意，所以要你再做一次呢？”只知道自己做完了很多，却不知道自己做得怎么样。
 
 
+
+### 03.技术上一些困惑
+- 技术学习的困惑：当达到一个瓶颈时，可以学习的参考系越来越少，首先是因为高端技术人才呈现倒金字塔形态，身边缺少能引领你的人生导师；其次，业内的技术交流，大多数在做科普以及分析行业趋势，很难讲具体技术细节，到达一定阶段后对个人提升作用越来越小。
+- 技术深度与广度的选择的困惑：技术深度的进一步提升，可以逐步做到业界大牛，专业技能越来越强，广度的延伸也更容易变成全栈技术人才，两者各有利弊，个人时间和精力有限，如何抉择？
+- 技术方向的困惑：大型互联网公司的技术框架基本都在最初选型时确立，与当时的业务规划、业界当时的技术趋势、个人的过往经验积累相关，成熟规模大的业务从稳定性考虑，一般技术选型落后新技术2、3年，对于技术人员来说，从实际工作考虑需要使用老技术，但是业界的趋势又是在朝着新技术的方向发展。
+
+
+
+
 ### 04.要让进度被关注
 - 前阵子，有个同事说，他因为工位调整，坐到了领导的旁边。刚开始的时候他还有点不适应，老觉得领导在看他，后来发现，人家根本没这个闲功夫儿。不过有意思的是，自从他觉得自己被上级“重点关注”后，效率跟以前相比竟然提升了一大截，工作干劲也上来了，做事如有神助。
 - 后来研究了下，发现这种现象可以用管理学中的一个名词——霍桑效应来解释。具体指的是，当一个人处于“被观察”，或者以为自己“被观察”的状态下，他的生产率就会得到提升。一旦我们想象有人盯着自己，就会开始注意自己的行为。
 
 
+
+### 09.开拓下技能思维
+- 除了关注技术发展的同时，也多关注行业的动态。我可以不懂大家怎么做，但你不能不知道大家在做什么，技术的行业的需求和发展方向又是什么，这些对于你的技术没有太多的帮助与提升，却对你的发展大有帮助。
 
 
 
