--- a/Read/ReadMeWiki/00.方案实践/02.Crash治理优化总结.md
+++ b/Read/ReadMeWiki/00.方案实践/02.Crash治理优化总结.md
@@ -2,14 +2,16 @@
 - 01.前沿概述
     - 1.1 背景前沿介绍
     - 1.2 思考一些问题
-    - 1.3 Crash治理原则
-    - 1.4 分析崩溃日志
+    - 1.3 Crash指标
+    - 1.4 Crash治理原则
+    - 1.5 分析崩溃日志
 - 02.Crash常见治理
     - 2.1 常见Crash分类
     - 2.2 空指针崩溃问题
     - 2.3 索引越界异常
     - 2.4 核心catch上报
     - 2.5 不要随意catch
+    - 2.6 Crash长效治理
 - 03.系统级别Crash
     - 3.1 排查解决思路
     - 3.2 解决Toast崩溃
@@ -59,14 +61,27 @@
     - 比如，外卖app某个用户地图出现了崩溃，当捕获到异常信息之后，这个时候可以采用降级的策略止损，然后去分析原因找出真正的问题。
 
 
-#### 1.3 Crash治理原则
+#### 1.3 Crash指标
+- 计算Crash率，我们首先应该明白稳定性优化的一些关键指标。UV Crash率与PV Crash率
+    - PV（Page View）即访问量，UV（Unique Visitor）即独立访客，0 - 24小时内的同一终端只计算一次。
+    - UV Crash率：针对用户使用量的统计，统计一段时间内所有用户发生崩溃的占比，用于评估Crash率的影响范围。
+    - PV Crash率：针对用户使用次数的统计，评估相关Crash影响的严重程度。
+    - 大家可以根据自己的需要选择合适的指标，需要注意的是，需要确保一直使用同一种衡量方式。
+- Crash率评价。那么，我们App的Crash率降低多少才能算是一个正常水平或优秀的水平呢？ 
+    - Java与Native的总崩溃率必须在千分之二以下。
+    - Crash率万分位为优秀
+- 注意，以上说的都是UV崩溃率。
+
+
+
+#### 1.4 Crash治理原则
 - **对于Crash的治理，尽量遵守以下三点原则**：
     - 由点到面。一个Crash发生了，我们不能只针对这个Crash的去解决，而要去考虑这一类Crash怎么去解决和预防。只有这样才能使得这一类Crash真正被解决。
     - 异常不能随便吃掉。随意的使用try-catch，只会增加业务的分支和隐蔽真正的问题，要了解Crash的本质原因，根据本质原因去解决。catch的分支，更要根据业务场景去兜底，保证后续的流程正常。
     - 预防胜于治理。当Crash发生的时候，损失已经造成了，我们再怎么治理也只是减少损失。尽可能的提前预防Crash的发生，可以将Crash消灭在萌芽阶段。
 
 
-#### 1.4 分析崩溃日志
+#### 1.5 分析崩溃日志
 - 确认重点（内存 & 线程 需特别注意，很多崩溃都是由于它们使用不当造成的）
     - 确认严重程度
         - 如果一时半会解决不了，那么能否先止损，采用降级策略。延期修复，如果是非要解决，那么解决完后即通过灰度测试发版，及时跟进问题。
@@ -115,14 +130,27 @@
 
 #### 2.4 核心catch上报
 - 核心try-catch建议增加APM异常上报
-    - 
+    - 对于一些特殊情况，比如说，开发过程当中或代码中出现了一些catch代码块，捕获住了异常，让程序不崩溃，这其实是不合理的，程序虽然没有崩溃，当时程序的功能已经变得不可用。
+    - 所以，这些被catch的异常我们也需要上报上来，这样我们才能知道用户到底出现了什么问题而导致的异常。
 - 如何捕获下层基础库异常，上报到APM？
-    - 举个例子，比如你是在app壳module集成APM，但是现在你想统计一些基础lib库module(被app依赖)的异常。显然
+    - 举个例子，比如你是在app壳module集成APM，但是现在你想统计一些基础lib库module(被app依赖)的异常。显然没办法直接做到……
 
 
 #### 2.5 不要随意catch
 
 
+#### 2.6 Crash长效治理
+- 开发阶段
+    - Crash的长效治理需要从开发阶段抓起，从长远来说，更好的代码质量将带来更好的稳定性，我们可以从以下两个角度来提升代码质量。
+    - 统一编码规范、增强编码功底、技术评审、增强CodeReview机制；架构优化，能力收敛(即将一些常见的操作进行封装)，统一容错：如在网络库utils中统一对返回信息进行预校验，如不合法就直接不走接下来的流程。
+- 测试阶段
+    - 除了功能测试、自动化测试、回归测试、覆盖安装等常规测试流程之外，还需要针对特殊场景、机型等边界进行测试：如服务端返回异常数据、服务端宕机等情况。
+- 合码阶段
+    - 在我们的功能开发完毕，即将合并到主分支时，首先要进行编译检测、静态扫描，来发现可能存在的问题。在扫描完成后也不能直接合入，因为多个分支可能会冲突，因此我们先进行一个预编译流程，即合入一个与主分支一样的分支、然后打包进行主流程自动化回归测试，流程通过后再合入主分支。当然这样做可能比较麻烦，但这些步骤应该都是自动化的。
+- 发布阶段
+    - 在发布阶段，我们应该进行多轮灰度，灰度量级应逐渐由小变大，用最小的代价提前暴露问题。灰度发布同样应该分场景、多纬度全面覆盖，可以针对特别的版本，机型等进行专门的灰度，看下那些更有可能出现问题的用户是否出现问题
+- 运维阶段
+    - 在上线之后，稳定性问题同样需要关注，因此特别依赖于APM的灵敏监控，发现问题及时报警。如果出现了异常情况，也需要根据情况进行回滚或者降级策略
 
 
 ### 03.系统级别Crash
