--- a/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
@@ -42,12 +42,16 @@
 
 ### 01.整体概述
 #### 1.1 项目背景
+- Android的稳定性是Android性能的一个重要指标，它也是App质量构建体系中最基本和最关键的一环。如果应用经常崩溃率，或者关键功能不可用，那显然会对我们的留存产生重大影响。
 
 
 #### 1.2 遇到问题
+- Crash率多少算优秀呢？在明确了目标之后，我们才能正确认识我们的工作到底有什么作用。
 
 
 #### 1.3 基础概念介绍
+- 崩溃现场是我们的“第一案发现场”，它保留着很多有价值的线索。接下来我们具体来看看在崩溃现场应该采集哪些信息。
+
 
 
 #### 1.4 设计目标
@@ -376,20 +380,22 @@
 
 
 #### 4.4 崩溃日志收集
-##### 4.4.1 收集信息说明
-- 收集崩溃时的基本信息
-    - 进程（前台进程还是后台进程）
-    - 线程（是否是 UI 线程）
-    - 崩溃堆栈（具体崩溃在系统的代码，还是我们自己的代码里面）
-    - 崩溃堆栈类型（Java 崩溃、Native 崩溃 or ANR）
+##### 4.4.1 收集崩溃信息
+- 从崩溃的基本信息，可以对崩溃有初步的判断。
+    - 进程名、线程名。崩溃的进程是前台进程还是后台进程，崩溃是不是发生在 UI 线程。
+    - 崩溃堆栈和类型。崩溃是属于 Java 崩溃、Native 崩溃，还是 ANR，对于不同类型的崩溃我们关注的点也不太一样。特别需要看崩溃堆栈的栈顶，看具体崩溃在系统的代码，还是我们自己的代码里面。
 - 收集崩溃时的系统信息
     - 机型、系统、厂商、CPU、ABI、Linux 版本等。（寻找共性）
     - Logcat。（包括应用、系统的运行日志，其中会记录 App 运行的一些基本情况）
+    - 设备状态：是否 root、是否是模拟器。一些问题是由 Xposed 或多开软件造成，对这部分问题我们要区别对待。
 - 收集崩溃时的内存信息（OOM、ANR、虚拟内存耗尽等，很多崩溃都跟内存有直接关系）
     - 系统剩余内存。（系统可用内存很小 – 低于 MemTotal 的 10%时，OOM、大量 GC、系统频繁自杀拉起等问题都非常容易出现）
     - 虚拟内存（但是很多类似OOM、tgkill 等问题都是虚拟内存不足导致的）
     - 应用使用内存（得出应用本身内存的占用大小和分布）
-    - 线程数
+- 资源信息
+    - 有的时候我们会发现应用堆内存和设备内存都非常充足，还是会出现内存分配失败的情况，这跟资源泄漏可能有比较大的关系。
+    - 文件句柄 fd。一般单个进程允许打开的最大文件句柄个数为 1024。但是如果文件句柄超过 800 个就比较危险，需要将所有的 fd 以及对应的文件名输出到日志中，进一步排查是否出现了有文件或者线程的泄漏
+    - 线程数。一个线程可能就占 2MB 的虚拟内存，过多的线程会对虚拟内存和文件句柄带来压力。根据我的经验来说，如果线程数超过 400 个就比较危险。需要将所有的线程 id 以及对应的线程名输出到日志中，进一步排查是否出现了线程相关的问题。
 - 收集崩溃时的应用信息
     - 崩溃场景（崩溃发生在哪个 Activity 或 Fragment，发生在哪个业务中）
     - 关键操作路径（记录关键的用户操作路径，这对我们复现崩溃会有比较大的帮助）
