--- a/Read/ReadMeWiki/00.方案实践/05.ANR监控治理实践.md
+++ b/Read/ReadMeWiki/00.方案实践/05.ANR监控治理实践.md
@@ -535,7 +535,9 @@
     - http://gityuan.com/2016/07/02/android-anr/
 - 微信Android客户端的ANR监控方案
     - https://mp.weixin.qq.com/s/fWoXprt2TFL1tTapt7esYg
-
+- 今日头条 ANR 优化实践系列
+    - https://juejin.cn/post/6947986170135445535
+    - https://juejin.cn/post/6942665216781975582
 
 
 
