--- a/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
@@ -318,6 +318,9 @@
     - 优化前后时间对比
 
 
+### 参考和学习
+- 抖音 Android 性能优化系列：启动优化实践：https://juejin.cn/post/7080065015197204511
+- 启动优化之理论和工具篇：https://juejin.cn/post/7058080006022856735
 
 ### 秒开
 - https://zhengxiaoyong.com/2016/07/18/Android%E7%AB%AF%E5%BA%94%E7%94%A8%E7%A7%92%E5%BC%80%E4%BC%98%E5%8C%96%E4%BD%93%E9%AA%8C/
