--- a/Read/ReadMeWiki/01.大型方案/01.组件化开发优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/01.组件化开发优化实践.md
@@ -10,13 +10,14 @@
     - 2.3 该库整体介绍
 - 03.组件化准备
     - 3.1 组件化需要考虑问题
-    - 3.2 分类拆分模块
+    - 3.2 组件化架构拆分
     - 3.3 组件和集成模式切换
-    - 3.4 组件初始化
-    - 3.5 组件化通信
+    - 3.4 组件的初始化
+    - 3.5 组件化之间通信
     - 3.6 application和library
 - 04.组件化注意坑
     - 4.1 编译时间统计和优化
+    - 4.2 避免组件依赖恶化
     - 4.4 组件化时资源名冲突
     - 4.6 关于依赖优化
     - 4.7 三方sdk拆分问题
@@ -30,11 +31,11 @@
     - 5.5 模块间依赖关系
     - 5.6 组件化通信
 - 06.稳定性实践说明
-    - 6.1 性能设计
+    - 6.1 性能设计实践
     - 6.2 稳定性设计
-    - 6.3 灰度设计
-    - 6.4 降级设计
-    - 6.5 异常设计
+    - 6.3 灰度设计实践
+    - 6.4 降级设计实践
+    - 6.5 异常设计实践
 - 07.项目优化点说明
 - 08.其他说明介绍
     - 8.1 参考链接
@@ -93,6 +94,7 @@
 #### 2.2 现在App架构图
 - 看架构图
 
+
 #### 2.3 该库整体介绍
 
 
@@ -119,16 +121,19 @@
 
 
 
-#### 3.2 分类拆分模块
-- 主工程：
+#### 3.2 组件化架构拆分
+- 主工程(壳工程代码，favor，debug助手等)：
     - 除了一些全局配置和主 Activity 之外，不要包含太多的业务代码。有的也叫做空壳app，主要是依赖业务组件进行运行。
-- 业务组件：
+- 业务组件(主要是业务层拆分的组件)：
     - 最上层的业务，每个组件表示一条完整的业务线，彼此之间互相独立。原则上来说：各个业务组件之间不能有直接依赖！所有的业务组件均需要可以做到独立运行的效果。对于测试的时候，需要依赖多个业务组件的功能进行集成测试的时候。可以使用app壳进行多组件依赖管理运行。
     - 该案例中分为：干活集中营，玩Android，知乎日报，微信新闻，头条新闻，搞笑视频，百度音乐，我的记事本，豆瓣音乐读书电影，游戏组件等等。
-- 功能组件：
+- 功能组件(分为服务组件和中台组件)：
     - 该案例中分为，登录注册组件，分享组件，评论反馈组件，支付组件，画廊组件等等。同时注意，可能会涉及多个业务组件对某个功能组件进行依赖！
-- 基础组件：
+- 基础组件(分为工具组件和视图组件)：
     - 支撑上层业务组件运行的基础业务服务。此部分组件为上层业务组件提供基本的功能支持。基础组件库中主要有，网络请求，图片加载，通信机制，工具类，分享功能，支付功能等等。当然，我把一些公共第三方库放到了这个基础组件中！
+- 这样拆分的目的
+    - 架构分层将模块化带来的网状依赖结构改造成树状依赖结构(上层依赖下层)，降低了依赖的复杂度，保障各层之间的依赖不劣化。
+
 
 
 #### 3.3 组件和集成模式切换
@@ -153,13 +158,13 @@
     - 在 library 和 application 之间切换，manifest文件也需要提供两套，以及 applicationId 配置等。具体可以看：[AndroidBusiness](build文件路径待完善)
 
 
-#### 3.4 组件初始化
+#### 3.4 组件的初始化
 - 组件初始化
     - 比如，你将该案例中的新闻组件切换成独立运行的app，那么由于新闻跳转详情页需要使用到x5的WebView，因此需要对它进行初始化。最刚开始做法是，为每一个可以切换成app的组件配置一个独立的application，然后初始化一些该组件需要初始化的任务。但是这么做，有一点不好，不是很方便管理。
     - 后来看了知乎组件化实践方案后，该方案提出，开发了一套多线程初始化框架，每个组件只要新建若干个启动 Task 类，并在 Task 中声明依赖关系。但是具体怎么用到代码中后期有待实现！
 
 
-### 3.5 组件化通信
+### 3.5 组件化之间通信
 - 组件化模式页面跳转如何通信
     - 这是组件化工程模型下的业务关系，业务之间将不再直接引用和依赖，而是通过“路由”这样一个中转站间接产生联系。在这个开源项目中，我使用的阿里开源的路由框架。
 - 组件化不同model业务相互调用通信
@@ -171,6 +176,14 @@
 
 
 ### 04.组件化注意坑
+
+
+#### 4.2 避免组件依赖恶化
+- 分层架构，技术人员定义了每一层组件的依赖规范，以防止不合理的循环依赖，保证整体依赖不劣化。
+- 在分层依赖规范中，高层可以依赖低层、实现可以依赖接口，接口层没有依赖，且优先以前向声明为主。
+
+
+
 #### 4.4 组件化时资源名冲突
 - 资源名冲突有哪些？
     - 比如，color，shape，drawable，图片资源，布局资源，或者anim资源等等，都有可能造成资源名称冲突。这是为何了，有时候大家负责不同的模块，如果不是按照统一规范命名，则会偶发出现该问题。
