--- a/Read/ReadMeWiki/02.性能工具/06.Android功耗分析.md
+++ b/Read/ReadMeWiki/02.性能工具/06.Android功耗分析.md
@@ -95,7 +95,8 @@
 ### 参考文档
 - https://blog.csdn.net/qihoo_tech/article/details/103535701
 - https://www.jianshu.com/p/a704e2268fe6
-
+- 抖音Android功耗优化：https://juejin.cn/post/7104618668835176456
+- 飞书功耗：https://juejin.cn/post/7096061502536286244
 
 
 
