--- a/Read/ReadMeWiki/01.大型方案/21.通知栏方案设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/21.通知栏方案设计实践.md
@@ -14,13 +14,13 @@
 - 03.通知栏简单实践
     - 3.1 创建通知的渠道
     - 3.2 发送通知栏操作
-    - 3.3 管理通知栏渠道
-    - 3.4 删除通知栏渠道
+    - 3.3 取消通知栏操作
+    - 3.4 管理通知栏渠道
+    - 3.5 删除通知栏渠道
     - 3.5 显示未读的图标
     - 3.7 前台服务通知栏
 - 04.通用方案思路
     - 4.1 适合多种业务场景
-    - 
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -39,9 +39,29 @@
 
 ### 01.整体概述
 #### 1.1 项目背景
+- **Notification通知用途**
+    - 显示接收到短消息、及时消息等信息（如QQ、微信、新浪、短信）
+    - 显示客户端的推送消息，如广告、优惠、版本更新、推荐新闻等，常用的第三方 SDK 有：JPush 、网易云信(偏重 IM ) 、阿里云推送
+    - 显示正在进行的事物，例如：后台运行的程序，如音乐播放进度、下载进度等
+    - 前两点可以归结为与用户交互，第三点是实时的任务提醒，但不可否认的是，第三点也会与用户交互。
+- 通知栏使用场景众多，针对通知栏8.0适配，通知栏channel管理等，打造一款通用通知栏适配方案比较重要。
+
+
+
 #### 1.2 遇到问题
+- Android O(8.0)通知的改变
+    - NotificationChannel是android8.0新增的特性，如果App的targetSDKVersion>=26，没有设置channel通知渠道的话，就会导致通知无法展示。
+    - 如果不适配，则报错内容：Failed to post notification on channel “null” Target Api is 26
+    - 报错解决方案：第一种：临时方案，google也考虑到适配问题，临时兼容方案是targetSDKVersion低于26；第二种：创建channel
+
+
+
 #### 1.3 基础概念介绍
+
+
 #### 1.4 设计目标
+
+
 #### 1.5 产生收益分析
 
 
@@ -84,6 +104,14 @@
 
 
 ### 03.通知栏简单实践
+- 大概就是下面这四步操作
+    - 创建NotificationManager来对通知进行管理，通过调用getSystemService(NOTIFICATION_SERVICE)来获得NotificationManager实例；
+    - 在Android8.0以后要对版本进行适配；
+    - 使用NotificationCompat设置标题 内容 图片等属性；
+    - 调用通知管理类的notify()方法弹出通知栏；
+
+
+
 #### 3.1 创建通知的渠道
 ##### 3.3.1 通知栏渠道创建
 - 简单代码如下所示：
@@ -141,6 +169,8 @@
 
 
 #### 3.2 发送通知栏操作
+- 创建notification必须添加的属性
+    - 小图标，通过 setSmallIcon() 方法设置；标题，通过 setContentTitle() 方法设置；内容，通过 setContentText() 方法设置
 - 触发通知的代码和之前版本基本是没有任何区别的，只是在构建通知对象的时候，需要多传入一个通知渠道ID，表示这条通知是属于哪个渠道的。
     - 注意点1：在NotificationCompat.Builder中需要多传入一个通知渠道ID，那么这里我们分别传入了chat和subscribe渠道ID。
     ```
@@ -273,10 +303,11 @@
 ### 05.方案基础设计
 #### 5.1 整体架构图
 - 通知栏相关类
-    - Notification
+    - Notification，通知对应类，保存通知相关的数据。
     - NotificationChannel
     - NotificationChannelGroup
     - NotificationManager
+        - NotificationManager 是通知管理类，它是一个系统服务。调用 NotificationManager 的 notify() 方法可以向系统发送通知。
     - INotificationManager
 - Androidx相关
     - NotificationCompat
