--- a/Read/ReadMeWiki/01.大型方案/21.通知栏方案设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/21.通知栏方案设计实践.md
@@ -11,6 +11,7 @@
     - 2.3 系统8.0的适配
     - 2.4 一定适配8.0吗
     - 2.5 通知栏三种样式
+    - 2.6 悬挂式通知失效
 - 03.通知栏简单实践
     - 3.1 创建通知的渠道
     - 3.2 发送通知栏操作
@@ -53,7 +54,8 @@
     - NotificationChannel是android8.0新增的特性，如果App的targetSDKVersion>=26，没有设置channel通知渠道的话，就会导致通知无法展示。
     - 如果不适配，则报错内容：Failed to post notification on channel “null” Target Api is 26
     - 报错解决方案：第一种：临时方案，google也考虑到适配问题，临时兼容方案是targetSDKVersion低于26；第二种：创建channel
-
+- setFullScreenIntent无效
+    - 在某些平台上，当用户正在使用设备时，系统UI可能会选择显示一个提醒通知，而不是启动这个意图。
 
 
 #### 1.3 基础概念介绍
@@ -100,6 +102,21 @@
 #### 2.4 一定适配8.0吗
 - 如果你将项目中的targetSdkVersion指定到了26或者更高，那么Android系统就会认为你的App已经做好了8.0系统的适配工作，当然包括了通知栏的适配。
 - 这个时候如果还不使用通知渠道的话，那么你的App的通知将完全无法弹出。因此这里给大家的建议就是，一定要适配。
+
+
+#### 2.5 通知栏三种样式
+- 普通Notification：
+- 折叠式Notification：折叠式Notification是一种自定义视图的Notification，用来显示长文本和一些自定义的布局的场景。它有两种状态，一种是普通状态下的视图（如果不是自定义的话和上面普通通知的视图样式一样），一种是展开状态下的视图。
+- 悬挂式Notification：Head up通知，android5.0新增，悬挂式Notification不需要下拉通知栏就直接显示出来悬挂在屏幕上方并且焦点不变仍在用户操作的界面因此不会打断用户的操作，过几秒就会自动消失。
+
+
+#### 2.6 悬挂式通知失效
+- 如何实现悬挂式通知
+    - 对于实现效果众说纷纭，大多倾向于调用NotificationCompat.Builder的方法setFullScreenIntent。但在不同机器上，似乎实现效果也不尽相同。
+- 使用Heads Up Notification也有必要前提条件。
+    - Android API >=21，即5.0以上
+    - 需要在设置中开启横幅通知权限（在设置通知管理中，不同机型可能存在差异）
+    - 需要设置震动或声音。（必须！）；需要设置Notification为最高权限。（必须！）
 
 
 
