--- a/Read/ReadMeWiki/01.大型方案/21.通知栏方案设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/21.通知栏方案设计实践.md
@@ -20,22 +20,24 @@
     - 3.5 删除通知栏渠道
     - 3.5 显示未读的图标
     - 3.7 前台服务通知栏
-- 04.通用方案思路
-    - 4.1 适合多种业务场景
-- 05.方案基础设计
-    - 5.1 整体架构图
-    - 5.2 UML设计图
-    - 5.3 关键流程图
-    - 5.4 接口设计图
-    - 5.5 模块间依赖关系
-- 06.其他设计说明
-    - 6.1 性能设计
-    - 6.2 稳定性设计
-    - 6.3 灰度设计
-    - 6.4 降级设计
-    - 6.5 异常设计
-- 07.其他说明介绍
-    - 7.1 参考链接
+- 04.通知栏遇到的坑
+    - 4.1 缺少属性不显示通知栏
+- 05.通用方案思路
+    - 5.1 适合多种业务场景
+- 06.方案基础设计
+    - 6.1 整体架构图
+    - 6.2 UML设计图
+    - 6.3 关键流程图
+    - 6.4 接口设计图
+    - 6.5 模块间依赖关系
+- 07.其他设计说明
+    - 7.1 性能设计
+    - 7.2 稳定性设计
+    - 7.3 灰度设计
+    - 7.4 降级设计
+    - 7.5 异常设计
+- 08.其他说明介绍
+    - 8.1 参考链接
 
 
 ### 01.整体概述
@@ -59,6 +61,9 @@
 
 
 #### 1.3 基础概念介绍
+- 普通Notification：发出通知后，通知会先以图标的形式显示在状态栏中。
+- 折叠式Notification：折叠式Notification是一种自定义视图的Notification，用来显示长文本和一些自定义的布局的场景。它有两种状态，一种是普通状态下的视图，一种是展开状态下的视图。
+- 悬挂式Notification：Head up通知，android5.0新增，悬挂式Notification不需要下拉通知栏就直接显示出来悬挂在屏幕上方并且焦点不变仍在用户操作的界面因此不会打断用户的操作，过几秒就会自动消失。
 
 
 #### 1.4 设计目标
@@ -105,9 +110,6 @@
 
 
 #### 2.5 通知栏三种样式
-- 普通Notification：
-- 折叠式Notification：折叠式Notification是一种自定义视图的Notification，用来显示长文本和一些自定义的布局的场景。它有两种状态，一种是普通状态下的视图（如果不是自定义的话和上面普通通知的视图样式一样），一种是展开状态下的视图。
-- 悬挂式Notification：Head up通知，android5.0新增，悬挂式Notification不需要下拉通知栏就直接显示出来悬挂在屏幕上方并且焦点不变仍在用户操作的界面因此不会打断用户的操作，过几秒就会自动消失。
 
 
 #### 2.6 悬挂式通知失效
@@ -186,8 +188,6 @@
 
 
 #### 3.2 发送通知栏操作
-- 创建notification必须添加的属性
-    - 小图标，通过 setSmallIcon() 方法设置；标题，通过 setContentTitle() 方法设置；内容，通过 setContentText() 方法设置
 - 触发通知的代码和之前版本基本是没有任何区别的，只是在构建通知对象的时候，需要多传入一个通知渠道ID，表示这条通知是属于哪个渠道的。
     - 注意点1：在NotificationCompat.Builder中需要多传入一个通知渠道ID，那么这里我们分别传入了chat和subscribe渠道ID。
     ```
@@ -310,15 +310,18 @@
 ### 05.创建通知的渠道
 
 
+#### 4.1 缺少属性不显示通知栏
+- 创建notification必须添加的属性
+    - 小图标，通过 setSmallIcon() 方法设置；标题，通过 setContentTitle() 方法设置；内容，通过 setContentText() 方法设置。发现如果缺少这几个元素，通知栏无法正常展示出来。
+- 为什么？
+    - 待完善
 
 
 
 
 
-
-
-### 05.方案基础设计
-#### 5.1 整体架构图
+### 06.方案基础设计
+#### 6.1 整体架构图
 - 通知栏相关类
     - Notification，通知对应类，保存通知相关的数据。
     - NotificationChannel
@@ -333,43 +336,41 @@
     - NotificationManagerService
 
 
-#### 5.2 UML设计图
+#### 6.2 UML设计图
 
 
-#### 5.3 关键流程图
+#### 6.3 关键流程图
 
 
-#### 5.4 接口设计图
+#### 6.4 接口设计图
 
 
-#### 5.5 模块间依赖关系
+#### 6.5 模块间依赖关系
 
 
-### 06.其他设计说明
-#### 6.1 性能设计
+### 07.其他设计说明
+#### 7.1 性能设计
 
 
-#### 6.2 稳定性设计
+#### 7.2 稳定性设计
 
 
-#### 6.3 灰度设计
+#### 7.3 灰度设计
 
 
-#### 6.4 降级设计
+#### 7.4 降级设计
 
 
-#### 6.5 异常设计
+#### 7.5 异常设计
 
 
-### 07.其他说明介绍
-#### 7.1 参考链接
+### 08.其他说明介绍
+#### 8.1 参考链接
 
 
 
 
 
-### 参考
-- https://github.com/zhanmusi2323/WindowHeadToast
 
 
 
